# dashboard_home

./: README.md  dashboard_app.py  pyproject.toml
Images/: christine.jfif
data/: active_chomes.py  exits.py  outcomes.py  providers.py  utils.py
data/processed/: active_chomes.csv  exits.csv  exits_imd.csv  merged.geojson
src/: app.py  datasets.py
src/pages/: comparison_tool.py  links.py  outsourcing_levels.py  quality_impacts.py  welcome.py
