[tool.poetry]
name = "outsourcing-impact-dashboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "2.13.0"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit_learn = "^1.3.2"
chart_studio = "^1.1.0"
datetime = "^5.3"
geopandas = "^0.14.1"
dash_bootstrap_components = "^1.5.0"
reverse_geocoder = "^1.5.1"
gunicorn = "^21.2.0"
statsmodels = "^0.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
